test/compile-fail/resolution/multiple-definition-fn-mod-struct/top.rhdl
fn b() {}
mod b {}
struct b {}
